# Human-Face-Detection

./: .gitignore  CMakeLists.txt  README.md
src/: AdaptiveMemoryPool.cpp  AdaptiveMemoryPool.h  CascadeFaceDetector.cpp  CascadeFaceDetector.h  ConfigurationManager.cpp  ConfigurationManager.h  FaceDetectorFactory.cpp  FaceDetectorFactory.h  IFaceDetector.h  ModelValidator.cpp  ModelValidator.h  PerformanceMonitor.cpp  PerformanceMonitor.h  VideoFaceDetector.cpp  VideoFaceDetector.h  YunetFaceDetector.cpp  YunetFaceDetector.h  faceDetectionWindow.cpp  faceDetectionWindow.h  faceDetectionWindow.ui  main.cpp
src/logging/: ILogger.h  LoggerManager.cpp  LoggerManager.h  Logging.h  SpdlogLogger.cpp  SpdlogLogger.h
tests/: CMakeLists.txt  test_cascade_detector.cpp  test_dnn_detector.cpp  test_integration.cpp  test_utils.h
